--- a/self-pack/package.json
+++ b/self-pack/package.json
@@ -10,6 +10,7 @@
     "@babel/generator": "^7.9.6",
     "@babel/traverse": "^7.9.6",
     "@babel/types": "^7.9.6",
-    "babylon": "^6.18.0"
+    "babylon": "^6.18.0",
+    "ejs": "^3.1.2"
   }
 }
