--- a/self-pack/package.json
+++ b/self-pack/package.json
@@ -11,6 +11,7 @@
     "@babel/traverse": "^7.9.6",
     "@babel/types": "^7.9.6",
     "babylon": "^6.18.0",
-    "ejs": "^3.1.2"
+    "ejs": "^3.1.2",
+    "tapable": "^1.1.3"
   }
 }
