--- a/webpack-loader/package.json
+++ b/webpack-loader/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "loader-utils": "^2.0.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   }
