--- a/webpack-loader/package.json
+++ b/webpack-loader/package.json
@@ -7,6 +7,7 @@
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "loader-utils": "^2.0.0",
+    "mime": "^2.4.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   }
