--- a/webpack-loader/package.json
+++ b/webpack-loader/package.json
@@ -6,9 +6,10 @@
   "dependencies": {
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
+    "less": "^3.11.1",
     "loader-utils": "^2.0.0",
-    "schema-utils": "^2.6.6",
     "mime": "^2.4.5",
+    "schema-utils": "^2.6.6",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   }
