--- a/prosemirror/package.json
+++ b/prosemirror/package.json
@@ -17,6 +17,7 @@
     "prosemirror-schema-basic": "^1.1.2",
     "prosemirror-schema-list": "^1.1.2",
     "prosemirror-state": "^1.3.3",
+    "prosemirror-tables": "^1.1.0",
     "prosemirror-transform": "^1.2.6",
     "prosemirror-view": "^1.14.13",
     "react": "^16.13.1",
