--- a/prosemirror-study/package.json
+++ b/prosemirror-study/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "prosemirror-commands": "^1.1.4",
+    "prosemirror-keymap": "^1.1.4",
     "prosemirror-model": "^1.10.0",
     "prosemirror-state": "^1.3.3",
     "prosemirror-view": "^1.15.0",
